--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -54,6 +54,7 @@ std = [
   "cumulus-pallet-xcm/std",
   "cumulus-pallet-xcmp-queue/std",
   "cumulus-primitives-core/std",
+  "cumulus-primitives-storage-weight-reclaim/std",
   "cumulus-primitives-timestamp/std",
   "cumulus-primitives-utility/std",
   "parachain-info/std",
@@ -233,6 +234,7 @@ cumulus-pallet-xcm = { workspace = true, default-features = false }
 pallet-collator-selection = { workspace = true, default-features = false }
 parachains-common = { workspace = true, default-features = false }
 cumulus-primitives-core = { workspace = true, default-features = false }
+cumulus-primitives-storage-weight-reclaim = { workspace = true, default-features = false }
 cumulus-primitives-timestamp = { workspace = true, default-features = false }
 cumulus-primitives-utility = { workspace = true, default-features = false }
 parachain-info = { workspace = true, default-features = false }
