--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -28,6 +28,7 @@ log = { workspace = true, default-features = true }
 codec.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
+futures = "0.3.28"
 
 # RPC related Dependencies
 jsonrpsee = { workspace = true, features = ["server"] }
@@ -55,6 +56,7 @@ sc-executor.workspace = true
 sc-keystore.workspace = true
 sc-network.workspace = true
 sc-network-sync.workspace = true
+sc-offchain.workspace = true
 sc-rpc.workspace = true
 sc-rpc-api.workspace = true
 sc-service.workspace = true
