--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -53,6 +53,7 @@ std = [
   "cumulus-pallet-parachain-system/std",
   "cumulus-pallet-xcm/std",
   "cumulus-pallet-xcmp-queue/std",
+  "cumulus-primitives-aura/std",
   "cumulus-primitives-core/std",
   "cumulus-primitives-storage-weight-reclaim/std",
   "cumulus-primitives-timestamp/std",
@@ -233,6 +234,7 @@ cumulus-pallet-parachain-system = { workspace = true, default-features = false }
 cumulus-pallet-xcm = { workspace = true, default-features = false }
 pallet-collator-selection = { workspace = true, default-features = false }
 parachains-common = { workspace = true, default-features = false }
+cumulus-primitives-aura = { workspace = true, default-features = false }
 cumulus-primitives-core = { workspace = true, default-features = false }
 cumulus-primitives-storage-weight-reclaim = { workspace = true, default-features = false }
 cumulus-primitives-timestamp = { workspace = true, default-features = false }
