unify xcm and local author

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -27,6 +27,7 @@ std = [
   "pallet-multisig/std",
   "pallet-nodle-uniques/std",
   "pallet-sponsorship/std",
+  "support/std",
   "pallet-insecure-randomness-collective-flip/std",
   "pallet-reserve/std",
   "pallet-scheduler/std",
@@ -265,6 +266,7 @@ pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
 pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
+support = { default-features = false, path = "../../support" }
 
 
 [build-dependencies]
