chore: fix lints + fix srtool output

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,12 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Tag to run the workflow on'
+        description: "Tag to run the workflow on"
         required: true
       run_specific_job:
-        description: 'Specify a job to run (test-runtime, try-runtime-execute, etc.)'
+        description: "Specify a job to run (test-runtime, try-runtime-execute, etc.)"
         required: true
-  
+
 env:
   toolchain: stable
   target: wasm32-unknown-unknown
@@ -132,7 +132,7 @@ jobs:
           name: try_runtime
           path: try_runtime
       - uses: robinraju/release-downloader@v1.10
-        with: 
+        with:
           repository: "NodleCode/paradis-snapshot"
           latest: true
           fileName: "paradis-snapshot-full.bz2"
@@ -146,7 +146,7 @@ jobs:
           runtime: try_runtime/runtime_eden.wasm
           checks: "all"
           options: "--disable-idempotency-checks"
-  
+
   try-runtime-eden-execute:
     runs-on: ubuntu-latest
     needs: try-runtime-prepare
@@ -157,7 +157,7 @@ jobs:
           name: try_runtime
           path: try_runtime
       - uses: robinraju/release-downloader@v1.10
-        with: 
+        with:
           repository: "NodleCode/eden-snapshot"
           latest: true
           fileName: "eden-snapshot-full"
