feat: bake para_eden_dev genesis into runtime which should be useful for benchmarking

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -183,6 +183,7 @@ scale-info = { workspace = true, default-features = false, features = [
   "derive",
 ] }
 serde = { workspace = true, optional = true, features = ["derive"] }
+serde_json = { features = ["alloc"], workspace = true }
 smallvec.workspace = true
 lazy_static = { workspace = true, default-features = false, features = [
   "spin_no_std",
