fix(runtime_eden): list of benchmarkd

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -52,6 +52,7 @@ std = [
   "cumulus-pallet-aura-ext/std",
   "cumulus-pallet-dmp-queue/std",
   "cumulus-pallet-parachain-system/std",
+  "cumulus-pallet-session-benchmarking/std",
   "cumulus-pallet-xcm/std",
   "cumulus-pallet-xcmp-queue/std",
   "cumulus-primitives-aura/std",
@@ -111,6 +112,7 @@ runtime-benchmarks = [
   "xcm-executor/runtime-benchmarks",
   "pallet-xcm-benchmarks/runtime-benchmarks",
   "cumulus-pallet-xcmp-queue/runtime-benchmarks",
+  "cumulus-pallet-session-benchmarking/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
   "cumulus-pallet-parachain-system/runtime-benchmarks",
   "cumulus-pallet-dmp-queue/runtime-benchmarks",
@@ -216,23 +218,20 @@ pallet-uniques = { workspace = true, default-features = false }
 pallet-utility = { workspace = true, default-features = false }
 pallet-aura = { workspace = true, default-features = false }
 pallet-identity = { workspace = true, default-features = false }
-
 cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
 pallet-xcm = { workspace = true, default-features = false }
 pallet-xcm-benchmarks = { workspace = true, default-features = false }
-
 pallet-contracts = { workspace = true, default-features = false }
-
 polkadot-parachain-primitives = { workspace = true, default-features = false }
 polkadot-runtime-common = { workspace = true, default-features = false }
 polkadot-primitives = { workspace = true, default-features = false }
-
 xcm = { workspace = true, default-features = false }
 xcm-builder = { workspace = true, default-features = false }
 xcm-executor = { workspace = true, default-features = false }
 cumulus-pallet-aura-ext = { workspace = true, default-features = false }
 cumulus-pallet-dmp-queue = { workspace = true, default-features = false }
 cumulus-pallet-parachain-system = { workspace = true, default-features = false }
+cumulus-pallet-session-benchmarking = { workspace = true, default-features = false }
 cumulus-pallet-xcm = { workspace = true, default-features = false }
 pallet-collator-selection = { workspace = true, default-features = false }
 parachains-common = { workspace = true, default-features = false }
