--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -28,7 +28,7 @@ WORKDIR /home/vscode
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y && \
     export PATH=$PATH:$HOME/.cargo/bin && \
     /tmp/init.sh && \
-    export SUBWASM_VERSION=`/version chevdor subwasm` && \
+    export SUBWASM_VERSION=0.16.1 && \
     cargo install --locked --git https://github.com/chevdor/subwasm --tag ${SUBWASM_VERSION} && \
-    export TRY_RUNTIME_VERSION=`/version paritytech try-runtime-cli` && \
+    export TRY_RUNTIME_VERSION=0.5.1 && \
     cargo install --locked --git https://github.com/paritytech/try-runtime-cli --tag ${TRY_RUNTIME_VERSION}
