--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -23,6 +23,7 @@ jobs:
           BUILD_OPTS: "--features on-chain-release-build"
         with:
           chain: ${{ env.CHAIN }}
+          package: runtime-${{ env.CHAIN }}
           runtime_dir: runtimes/${{ env.CHAIN }}
           tag: 1.77.0
 
