--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Srtool build
         id: srtool_build
         uses: chevdor/srtool-actions@v0.9.2
@@ -52,5 +53,5 @@ jobs:
             ${{ steps.srtool_build.outputs.wasm }}
             ${{ steps.srtool_build.outputs.wasm_compressed }}
             ${{ env.CHAIN }}-srtool-digest.json
-            $WASM_BINARY_TEST
-            $WASM_BINARY_DEV
+            ${{ env.WASM_BINARY_TEST }}
+            ${{ env.WASM_BINARY_DEV }}
